steps/x-demo-policy-reporter/policies/pol-forbid-capabilities.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities
  annotations:
    policies.kyverno.io/title: Disallow Capabilities
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Adding capabilities beyond those listed in the policy must be disallowed.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: adding-capabilities
    match:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          - StatefulSet
          - DaemonSet
    validate:
      message: "Any capabilities added beyond the allowed list (AUDIT_WRITE, CHOWN, DAC_OVERRIDE, FOWNER, FSETID, KILL, MKNOD, NET_BIND_SERVICE, SETFCAP, SETGID, SETPCAP, SETUID, SYS_CHROOT) are disallowed."
      pattern:
        spec:
          =(initContainers):
          - =(securityContext):
              =(capabilities):
                =(add): "!SYS_ADMIN | !NET_ADMIN | !SYS_TIME | !SYS_MODULE"
          containers:
          - =(securityContext):
              =(capabilities):
                =(add): "!SYS_ADMIN | !NET_ADMIN | !SYS_TIME | !SYS_MODULE"
