steps/x-demo-policy-reporter/policies/pol-forbid-latest.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The ':latest' tag is mutable and can lead to unexpected errors if the 
      image changes. A best practice is to use an immutable tag that maps to 
      a specific version of an application Pod.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: check-image-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          - StatefulSet
          - DaemonSet
    validate:
      message: "Using a mutable image tag e.g. 'latest' is not allowed."
      pattern:
        spec:
          =(securityContext):
            =(runAsNonRoot): "true"
          =(initContainers):
          - name: "*"
            image: "!*:latest"
          containers:
          - name: "*"
            image: "!*:latest"
