steps/x-demo-policy-reporter/policies/pol-need-labels.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Define and use labels that identify semantic attributes of your application or Deployment.
      A common set of labels allows tools to work collaboratively, describing objects in a common manner.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: check-team
    match:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          - Service
          - StatefulSet
          - DaemonSet
    validate:
      message: "The label 'app' is required."
      pattern:
        metadata:
          labels:
            app: "?*"
